# QLK-Contract-Quard

./: .gitignore  DEPLOYMENT.md  Makefile  QUICK-DEPLOY.md  RAILWAY_CACHE_BUST.txt  README.md  alldocs.md  contractquard.yaml  docker-compose.dev.yml  docker-compose.yml  grok_test_contract.sol  pyproject.toml  railway.toml  requirements.txt  setup.py  simple_test.sol  test_contract.sol  test_export.json  test_vulnerable_contract.go  test_vulnerable_contract.rs  test_vulnerable_contract.sol
docs/: IMPLEMENTATION_SUMMARY.md  MULTI_LANGUAGE_ANALYSIS_ARCHITECTURE.md
examples/: multi_language_analysis_demo.py  vulnerable_contract.sol
go_parser_helper/: go.mod  main.go
rust_parser_helper/: Cargo.toml
rust_parser_helper/src/: main.rs
scripts/: deploy.sh  dev-setup.sh  verify-deployment.sh
src/contractquard/: __init__.py  cli.py
src/contractquard/analysis/: __init__.py  control_flow.py  data_flow.py  engine.py  semantic_analyzer.py  symbolic_execution.py  taint_analysis.py  vulnerability_detector.py
src/contractquard/core/: __init__.py  analyzer.py  config.py  findings.py
src/contractquard/detectors/: __init__.py  ast_access_control.py  ast_reentrancy.py  ast_unchecked_calls.py  base.py  regex_detector.py  registry.py
src/contractquard/ir/: __init__.py  analyzer.py  builder.py  graphs.py  nodes.py  transformer.py
src/contractquard/parsers/: __init__.py  go_parser.py  rust_parser.py  solidity_parser.py
src/contractquard/reporters/: __init__.py  base.py  console.py  factory.py  json_reporter.py
src/contractquard/utils/: __init__.py
src/types/: index.ts
tests/: __init__.py  conftest.py
tests/unit/: test_analyzer.py
web/backend/: .env.example  .env.production.example  Dockerfile  __init__.py  contractquard.db  database.py  entrypoint.sh  main.py  models.py  requirements-minimal.txt  requirements.txt
web/frontend/: .env.production  .env.vercel  Dockerfile  VERCEL-DEPLOY.md  index.html  package.json  tailwind.config.js  tsconfig.json  vercel-minimal.json  vercel.json  vite.config.ts
(+61 files in other folders)
