[package]
name = "rust_parser_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.tokio]
version = "1.0"
features = ["full"]
optional = true

[[bin]]
name = "rust_parser_helper"
path = "src/main.rs"
